--- a/src/app/routes/home/home/home.component.html
+++ b/src/app/routes/home/home/home.component.html
@@ -17,18 +17,25 @@
     </div>
 
 
-    <agm-map [latitude]="location.latitude" [longitude]="location.longitude"  [zoom]="location.zoom" (mapClick)="addMarker($event.coords.lat, $event.coords.lng)">
-        <agm-marker 
-        *ngFor="let marker of location.markers" [latitude]="marker.lat" 
-        [longitude]="marker.lng" 
-        (markerClick)="selectMarker($event)"     [markerDraggable]="true"
-        (dragEnd)="markerDragEnd(coords, $event)"
-        [label]="marker.label"
-    ></agm-marker>
-    </agm-map>
-    <div>
-        Selected Marker is: Longitude {{selectedMarker.lat}} Latitude {{selectedMarker.lng}}
-    </div>
+<!-- app.component.html -->
+<div class="container">
+ 
+  <h1>Angular Google Maps with Places Search Example</h1>
+ 
+  <div class="form-group">
+    <label>Enter address</label>
+    <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+  </div>
+ 
+  <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+    <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+      (dragEnd)="markerDragEnd($event)"></agm-marker>
+  </agm-map>
+ 
+  <h5>Address: {{address}}</h5>
+  <div>Latitude: {{latitude}}</div>
+  <div>Longitude: {{longitude}}</div>
+</div>
 
 
 </div>
